<resources>
    <string name="app_name">Just Manga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="afternoon_greeting">Good Afternoon</string>
    <string name="morning_greeting1">Good Morning</string>
    <string name="night_greeting1">Good Night</string>
    <string name="night_greeting2">What A Beautiful Night</string>
    <string name="evening_greeting1">Good Evening</string>
    <string name="morning_greeting2">Have A Great Day</string>
    <string name="liked_manga">Liked Manga</string>
    <string name="manga_name">Manga Name</string>
    <string name="popular_right_now">Popular Right Now</string>
    <string name="your_recent_manga">Your Recent Manga</string>
    <string name="new_manga">New Manga</string>
    <string name="more">more..</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="alternative">Alternative</string>
    <string name="artist">Artist</string>
    <string name="status">Status</string>
    <string name="genres">Genres</string>
    <string name="chapter_number">Chp. %chp</string>
    <string name="pages_number">$pgs Pgs.</string>
    <string name="volume">Vol %vol.</string>
</resources>