<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".fragments.MainFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/greetingsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/varela_round"
                android:gravity="start"
                android:text="@string/morning_greeting1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/settingsBttn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/settings_icon"
                app:layout_constraintBottom_toBottomOf="@+id/profileBttn"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/profileBttn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/user_icon"
                app:layout_constraintBottom_toBottomOf="@+id/greetingsTV"
                app:layout_constraintEnd_toStartOf="@+id/settingsBttn"
                app:layout_constraintTop_toTopOf="@+id/greetingsTV"
                app:tint="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/btnsLV"
                android:layout_width="match_parent"
                android:layout_height="178dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/greetingsTV"
                tools:layout_editor_absoluteX="16dp">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/varela_round"
                android:text="@string/popular_right_now"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnsLV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularMangasRV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/varela_round"
                android:text="@string/your_recent_manga"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularMangasRV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentMangasRV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/varela_round"
                android:text="@string/your_recent_manga"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recentMangasRV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newMangasRV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>